# heartFailure_Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  train.py
api/: Dockerfile  docker-compose.yml  prometheus.yml
api/app/: .gitignore  app.py  requirements.txt
app/: app.py
